constrain maps to try + prevent them from jumping all over the place in size

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -200,3 +200,9 @@ figcaption {
   margin-top: 1.5rem;
   text-align: center;
 }
+
+// try to keep the sizes consistent
+.timeline-map {
+  margin: auto;
+  max-height: 1600px;
+}
